fixed footer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ button:hover {
     position: relative;
     text-shadow: 0 0 4rem #847a96;
     font-family: "BigNoodleTooOblique";
-    font-size: 6rem;        
+    font-size: 6rem;
 }
 
 .character {
@@ -193,7 +193,7 @@ em {
 
 footer {    
     bottom: 2rem;
-    left: 2rem;
+    right: 2rem;
     overflow: auto;
     position: absolute;
 }
@@ -210,7 +210,7 @@ footer div {
 
 footer .key {
     background: rgba(0, 0, 0, 0.4);
-    border-radius: 2px;
+    border-radius: 4px;
     border: 1px solid #ccc;
     color: #ffffff;
     display: inline-block;
